--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<html lang=" pt-br">
+
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Aluraflix</title>
     </head>
 
 <html> 
-</head>
+</head> 
 <body>
 
 <header>ALURAFLIX</header>
@@ -19,3 +21,4 @@
 
 
 </body>
+</html>
